# dex.cto

./: .env.example  .gitignore  Anchor.toml  BACKEND_VERIFICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  PROGRAM_ID_UPDATE.md  README.md  SECURITY.md  package.json
.cursor/rules/: memory.mdc  nextjs.mdc  task-lists.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
apps/web/: .env.example  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tsconfig.json
apps/web/components/: BetaBanner.tsx  CampaignView.tsx  ContributeCard.tsx  CreateCampaignForm.tsx  FinalizeActions.tsx  MonitoringDashboard.tsx  SubmitMetadataForm.tsx  UserFriendlyMetadataForm.tsx  WalletButton.tsx  WalletConnectionProvider.tsx
docs/: ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  CONTRACT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PREPARATION.md  ERROR_HANDLING_IMPROVEMENTS.md  HASH_ALGORITHM_FIX.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md  QUICK_DEPLOY.md  QUICK_START_FIXES.md  README_ROADMAP.md  REENTRANCY_PROTECTION.md  TASK_3_COMPLETION_SUMMARY.md  TASK_LIST.md  VALIDATION_IMPLEMENTATION.md
programs/cto_dex_escrow/: Cargo.toml
programs/cto_dex_escrow/src/: lib.rs
programs/cto_dex_escrow/tests/: cto_dex_escrow.toml  js.test.ts
scripts/: deploy-program.js  deploy.ps1  deploy.sh  verify-program.js
scripts/keeper/: .env.example  README.md  jest.config.js  jest.setup.js  package.json  test-hash-consistency.js  test-keeper.js  test-minimal.js
(+27 files in other folders)
